# lms-edu

./: README.md  pyproject.toml
administrator/: urls.py  views.py
administrator/templates/: dashboard.html
core/: middleware.py  settings.py  urls.py
courses/: models.py
courses/admin/urls/: course.py  lesson.py
courses/admin/views/: course.py  lesson.py
courses/migrations/: 0001_initial.py
courses/templates/admin/course/: create.html  delete.html  detail.html  list.html  update.html
courses/templates/admin/lesson/: create.html  detail.html  list.html  update.html
users/: models.py  urls.py  utils.py
users/admin/: forms.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/: login.html
users/templates/admin/: create_user.html  delete_user.html  detail_user.html  list_users.html  update_user.html
