[tool.poetry]
name = "lms-edu"
version = "0.1.0"
description = ""
authors = ["itsnooruh <mokhinurkhasanova365@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.3"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
